--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,9 @@
 baseURL = "/"
 languageCode = "es-es"
 title = "magga"
-theme = "Docdock"
+# theme = "Docdock"
+theme = "hugo-theme-docdock"
+themesdir = "/themes"
 ordersectionsby = "title"
 [params]
 themeStyle = "original"
