--- a/themes/docdock/netlify.toml
+++ b/themes/docdock/netlify.toml
@@ -4,9 +4,9 @@
 && hugo -s exampleSite --config "exampleSite/config.toml,exampleSite/config-original.toml"'''
 
 [build.environment]
-  HUGO_VERSION = "0.51"
-  HUGO_THEME = "repo"
-  HUGO_THEMESDIR = "/opt/build"
+#  HUGO_VERSION = "0.51"
+#  HUGO_THEME = "repo"
+#  HUGO_THEMESDIR = "/opt/build"
 
 # [context.production.environment]
 #   HUGO_VERSION = "0.51"
@@ -16,4 +16,3 @@
 
 # [context.branch-deploy.environment]
 #   HUGO_VERSION = "0.51"
-  
